LabasCode/cilium/cilium-1.15.0-rc.1/8-cilium-Securing-Networks-with-Cilium/1-cilium-Locking-Down-External-Access-with-DNS-Based-Policies/2-DNS-Policies-Using-Patterns/cilium-DNS-Policies-Using-Patterns.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "fqdn"
spec:
  endpointSelector:
    matchLabels:
      org: empire
      class: mediabot
  egress:
  - toFQDNs:
    - matchPattern: "*.gitee.com"
  - toEndpoints:
    - matchLabels:
        "k8s:io.kubernetes.pod.namespace": kube-system
        "k8s:k8s-app": kube-dns
    toPorts:
    - ports:
      - port: "53"
        protocol: ANY
      rules:
        dns:
        - matchPattern: "*"
